--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
   </head>
   <body>
-    <div class="container text-center">
+    <div class="container">
       <div ui-view></div>
     </div>
   </body>
