add 'item.' to here in the sign in buttons to make them actually function properly. add filter to roster partial to properly sort students by attendance

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <div class="container">
+      <p><a href="#/signin">Sign In</a> | <a href="#/roster">Roster</a></p>
       <div ui-view></div>
     </div>
   </body>
